# pricing_engine

./: README.md  pyproject.toml
example/: run_pricing_demo.py
notebooks/: BlackScholes PDE.ipynb  Finite Difference PDE.ipynb  Matrix Decomposition.ipynb  Numerical Integration.ipynb  Root finding & Optmization.ipynb
src/numerical_methods/: blackscholespde.py  finitepde.py  matrixdecompostion.py  numericalintegration.py  pricingengine.py  rootoptimization.py
