[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-engine"
version = "0.1.0"
description = "A quantitative finance pricing library with Black-Scholes, Monte Carlo, and PDE methods."
authors = [
  { name = "Bernardo Silva" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
